--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -20,6 +20,7 @@
 	--black: hsla(0, 0%, 0%, 1);
 	--black-alpha-80: hsla(0, 0%, 0%, 0.8);
 	--black-alpha-15: hsla(0, 0%, 0%, 0.15);
+	
 
 	/**
    * GRADIENT COLOR
@@ -184,15 +185,19 @@ html {
 	scroll-behavior: smooth;
 }
 
+
+
 body {
-	background-color: var(--tea-rose);
+	background-color: black;
 	color: var(--white);
 	font-family: var(--fontFamily-dm_sans);
 	font-size: var(--fontSize-body-4);
 	font-weight: var(--weight-regular);
 	line-height: var(--lineHeight-5);
 	/* overflow: hidden; */
-	height: 300vh;
+	height: 200vh;
+	/* margin: 0;
+	padding: 0; */
 }
 
 body.loaded {
