--- a/client/src/features/news/style/style.css
+++ b/client/src/features/news/style/style.css
@@ -11,6 +11,11 @@ body {
     padding: 40px;
     
 }
+.containerSaleForm{
+
+  padding: 40px;
+  
+}
 /* .swiper {
     width: 600px;
     height: 300px;
