--- a/client/src/features/service/style/style.css
+++ b/client/src/features/service/style/style.css
@@ -1,45 +1,41 @@
-h2, h3 {
-    color: aliceblue;
+h2,
+h3 {
+  color: aliceblue;
 }
 body {
-    height: 100%;
+  height: 100%;
 }
 img {
-    width: 50vw;
-    margin: 20px;
-   }
- 
-   h3 {
-     line-height: 30px;
- 
-   }
- 
-   button {
-     background-color: goldenrod;
-     color: black;
-     padding-top: 1.3%;
-     padding-bottom: 1.3%;
-     padding-left: 5%;
-     padding-right: 5%;
-     font-size: 120%;
-     border-radius: 30px;
-     border-width: 3px;
-     margin: 24px;
-   }
-   .post-page{
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  width: 50vw;
+  margin: 20px;
+}
 
-  }
+h3 {
+  line-height: 30px;
+}
 
+button {
+  background-color: goldenrod;
+  color: black;
+  padding-top: 1.3%;
+  padding-bottom: 1.3%;
+  padding-left: 5%;
+  padding-right: 5%;
+  font-size: 120%;
+  border-radius: 30px;
+  border-width: 3px;
+  margin: 24px;
+}
+/* .post-page {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+} */
 
-
-  .form__container {
-    color: aliceblue;
-    border-radius: 8px;
+.form__container {
+  color: aliceblue;
+  border-radius: 8px;
   /* border: 1px solid white; */
   display: flex;
   align-items: center;
@@ -48,26 +44,26 @@ img {
 }
 .formsale {
   border: 1px solid white;
- margin: 20px;
- padding: 30px;
- width: 80%;
- border-radius: 20px;
+  margin: 20px;
+  padding: 30px;
+  width: 80%;
+  border-radius: 20px;
 }
 
 input {
   background-color: rgb(78, 77, 77);
   border-radius: 20px;
-font-size: x-large;
-   margin-top: 20px;
-   margin-bottom: 20px;
-   color: black;
+  font-size: x-large;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: black;
 }
 
-.biginput{
+.biginput {
   height: 200px;
 }
 
-.service-card{
+.service-card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -76,4 +72,23 @@ font-size: x-large;
 
 .form__label {
   font-size: x-large;
+}
+.services-page {
+  display: flex;
+  flex-direction: column;
+  margin: 30px;
+}
+.content {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.selector {
+  display: flex;
+  width: 20vw;
+  justify-content: space-between;
+}
+#usluga {
+  display: flex;
 }
