--- a/client/src/features/usluga/style/style.css
+++ b/client/src/features/usluga/style/style.css
@@ -3,8 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: aquamarine;
 }
-.sales-container {
-  background-color: red;
+.price-item {
+  display: flex;
 }
