--- a/client/src/features/usluga/style/style.css
+++ b/client/src/features/usluga/style/style.css
@@ -7,3 +7,11 @@
 .price-item {
   display: flex;
 }
+.usluga-cont {
+  height: 300px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  overscroll-behavior: contain;
+  border: 1px solid #c1c1c1;
+  padding: 3px;
+}
