--- a/client/src/features/Navbar/style/style.css
+++ b/client/src/features/Navbar/style/style.css
@@ -1,7 +1,8 @@
 
 #navbarResponsive{
   display: flex;
-  
+  width: 100%;
+  margin: 30px;
   flex-direction: row;
 
     align-items: center;
@@ -18,9 +19,7 @@
       "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.nav-item {
-  color: #AD974F;
-}
+
   .groupGold, .gold
 {
   color: #AD974F;
@@ -29,3 +28,148 @@
 li {
   margin: 20px;
 }
+
+#group {
+    font-size: large;
+   background-color: #f9d806;
+   padding: 5px;
+   margin: 5px;
+   border-radius: 4px
+
+}
+
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;1,500&family=Roboto+Condensed:wght@300;400;700&display=swap');
+
+
+:root{
+    --yellow:#f9d806;
+    --light-yellow:#ac9500;
+    --black:#130f40;
+    --light-color:#666;
+    --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
+    --border:.1rem solid rgba(0,0,0,.1);
+}
+
+*{
+    
+    font-family: 'Poppins', sans-serif;
+    margin:0; padding:0;
+    box-sizing: border-box;
+    outline: none; border:none;
+    text-decoration: none;
+    text-transform: capitalize;
+    transition: .2s linear;
+}
+
+html{
+    font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-padding-top: 7rem;
+    scroll-behavior: smooth;
+}
+
+/* body{
+    height: 300rem;
+} */
+.navbar-collapse{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* position: fixed; */
+    top:0; left:0; right:0;
+    padding:3rem 9%;
+    z-index: 1000;
+    background: #000000;
+}
+
+.header .logo{
+    font-size: 2.5rem;
+    color:var(--black);
+    font-weight: bold;
+}
+.header .logo span{
+    color:var(--yellow);
+}
+
+.nav-item{
+    margin:0 1rem;
+    font-size: 1.7rem;
+    
+    color: #ffc400;
+  
+}
+.btn{
+    display: inline-block;
+    margin-top: 1rem;
+    padding:.8rem 3rem;
+    background:var(--light-yellow);
+    color:var(--black);
+    cursor: pointer;
+    font-size: 1.7rem;
+    border-radius: .5rem;
+    font-weight: 500;
+    text-align: center;
+}
+.btn:hover{
+    background:var(--yellow);
+}
+.btn:visited{
+    background:var(--yellow);
+}
+
+
+#login-btn i{
+    font-size: 2.5rem;
+    color: var(--light-color);
+    cursor: pointer;
+    display: none;
+}
+.form-label:hover {
+    color: orange;
+    text-shadow: 1px 1px 1px orangered;
+}
+
+.nav-item:hover{
+    color: orange;
+    padding-right: 2rem;
+    text-shadow: 1px 1px 1px orangered;
+}
+.nav-item{
+    text-decoration: none;
+    padding-right: .5rem;
+}
+#menu-btn{
+    font-size: 2.5rem;
+    color:var(--light-color);
+    display: none;
+}
+
+.header.active{
+    box-shadow: var(--box-shadow);
+    padding: 2rem 9%;
+}
+
+li{list-style: none;}
+.nav2{
+    position: absolute;
+    margin-top: 350px;
+    margin-right: 20px;
+    background-color: wheat;
+    border-radius: 20px;
+    transition: 0.5s;
+
+}
+.nav2:hover{
+    color: var(--yellow);
+    box-shadow: var(--box-shadow);
+}
+.navlink {
+    color: yellow;
+}
+.navlink:hover {
+    color: orange;
+   
+    text-shadow: 1px 1px 1px orangered;
+}
+
