--- a/client/src/features/admin/style/style.css
+++ b/client/src/features/admin/style/style.css
@@ -5,14 +5,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  
   margin: 20px;
 }
 .form__add-post {
-  border: 1px solid white;
+  border: 1px solid yellow;
  margin: 20px;
  padding: 20px;
  width: 50%;
  border-radius: 20px;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ flex-direction: column;
 }
 
 input {
@@ -33,4 +39,8 @@ input {
   background-color: goldenrod;
   color: black;
   
+}
+
+.form__label {
+  padding: 10px;
 }
