--- a/client/src/features/usluga/style/style.css
+++ b/client/src/features/usluga/style/style.css
@@ -15,3 +15,30 @@
   border: 1px solid #c1c1c1;
   padding: 3px;
 }
+
+.containerPay {
+  /* position: absolute; */
+  /* position: relative; */
+  background-color: rgb(186, 193, 200);
+  /* background: rgba(0, 0, 0, 0.5); */
+  width: 50%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: flex-start; */
+  z-index: 100;
+  /* opacity: 1; */
+}
+#zPlan {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
