--- a/client/src/features/main/style/main.css
+++ b/client/src/features/main/style/main.css
@@ -113,4 +113,21 @@ width: 100%;
 }
 
 
+.footeritem{
+  margin:0 1rem;
+  
+
+  color: #ffc400;
+
+}
+.footeritem:hover{
+  color: orange;
+  padding-right: 2rem;
+  text-shadow: 1px 1px 1px orangered;
+}
+.footeritem{
+  text-decoration: none;
+  padding-right: .5rem;
+}
+
 
