--- a/client/src/features/404/style/style.css
+++ b/client/src/features/404/style/style.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  width: 100%;
 }
 
 .error-title {
@@ -12,5 +12,7 @@
 }
 
 .error-message {
-  font-size: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
