--- a/client/src/features/main/style/main.css
+++ b/client/src/features/main/style/main.css
@@ -24,9 +24,11 @@
   position: absolute;
   top: 620px;
 }
-h1 {
+#bigName {
   font-size: 80px;
-  color: yellow
+  color: yellow;
+
+  
  
   /* min-width: 100%;
   min-height: 100%; */
@@ -52,26 +54,17 @@ h1 {
 
 .btn {
  
-  font-family:
-    Montserrat,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    'Helvetica Neue',
-    Arial,
-    sans-serif,
-    'Apple Color Emoji',
-    'Segoe UI Emoji',
-    'Segoe UI Symbol',
-    'Noto Color Emoji';
-  font-weight: 700;
+
+  /* font-weight: 700; */
 }
 .btn:hover{
   background:var(--yellow);
 }
 
-
+.btn a{
+  font-weight: 500;
+  color: black;
+}
 
 
 .newsPart {
@@ -84,20 +77,19 @@ h1 {
  justify-content: center;
   align-items: center;
 } 
-/* штука которая уменьшает размер */
-/* .wrapper {
-  background-color: blue;
-height: 100%;
-width: 100%;
 
-
-
-} */
 
 .sliderPart {
   width: 100%;
-}
 
+}
+.slick-slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+
+}
 .container {
   background-color: black;
   width: 100%;
@@ -105,7 +97,7 @@ width: 100%;
 
 }
 .content {
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
 }
 
 #background-video {
@@ -131,3 +123,86 @@ width: 100%;
 }
 
 
+h1 {
+  font-size: 25px;
+  color: yellow;
+
+}
+/* rega */
+
+#selectClick {
+    font-size: large;
+   background-color: #f9d806;
+   padding: 5px;
+   margin: 5px;
+   border-radius: 4px
+  
+  }
+
+  form{
+    display: flex;
+    flex-direction: column;
+  }
+  .form-label:hover {
+    color: orange;
+    text-shadow: 1px 1px 1px orangered;
+}
+.form-label {
+  color: yellow;
+  display: flex;
+  align-items: center;
+ flex-direction: column;
+  justify-content: space-between;
+  font-size: x-large;
+ 
+}
+#selectClickService {
+  font-size: large;
+  background-color: #f9d806;
+  padding: 5px;
+  margin: 5px;
+  border-radius: 4px
+}
+#uslugaselect {
+  font-size: large;
+  background-color: #f9d806;
+  padding: 5px;
+  margin: 5px;
+  border-radius: 4px
+}
+.regcont{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+} 
+
+input {
+  background-color: rgb(0, 0, 0);
+  border-radius: 20px;
+height: 50px;
+   margin-top: 20px;
+   margin-bottom: 20px;
+   color: black;
+   text-shadow: 1px 1px 1px rgb(0, 0, 0);
+ 
+}
+input value {
+  color: black;
+}
+.btns{
+  padding: 20px;
+
+}
+
+
+
+.carpic {
+  width: 150px;
+}
+
+.picnav  {
+  width: 150px;
+  margin-left: 5px;
+}
