--- a/client/src/features/news/style/modal.css
+++ b/client/src/features/news/style/modal.css
@@ -1,21 +1,26 @@
 .modal {
-    height: 100vh;
-    width: 100vw;
-  
+    /* height: 100%;
+    width: 100%; */
+    background-color: rgba(0, 0, 0, 1);
     position: fixed;
     top: 0;
     left: 0;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
-    opacity: 0;
+    /* opacity: 0; */
     pointer-events: none;
-    width: 400px;
+    /* width: 400px; */
     /* transform: scale(0); */
     transition: 0.5s;
 }
+.post__container {
+    background-color: rgba(0, 0, 0, 0.5);
+}
 .modal.active{
-    opacity: 1;
+    opacity:1;
+    display: flex;
+  
     /* transform: scale(1); */
     pointer-events: all;
 
@@ -23,14 +28,31 @@
 .modal-content{
     padding: 20px;
     border-radius: 12px;
-    background-color: rgb(113, 98, 10);
-    border: 1px solid white;
+    background-color: rgb(0, 0, 0);
+    border: 1px solid yellow;
     
     width: 50vw;
     transform: scale(0.5);
     transition: 0.4s all;
    
 }
+
+input {
+    background-color: rgb(78, 77, 77);
+    border-radius: 20px;
+  
+     margin-top: 20px;
+     margin-bottom: 20px;
+     color: black;
+  }
 .modal-content.active{
     transform: scale(1);
+}
+
+.form__label {
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    color: aliceblue;
 }
