--- a/client/src/features/sales/style/style.css
+++ b/client/src/features/sales/style/style.css
@@ -3,8 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: aquamarine;
-}
-.sales-container {
-  background-color: red;
+  border: 1px solid yellow;
+  border-radius: 20px;
+
 }
