--- a/client/src/features/news/style/slider.css
+++ b/client/src/features/news/style/slider.css
@@ -37,7 +37,7 @@ background-color: blue;
 
 
 .btn {
-  background-color: aqua;
+  background-color: gold;
 }
 .posts_slide_container {
   display: flex;
