--- a/client/src/features/Navbar/style/style.css
+++ b/client/src/features/Navbar/style/style.css
@@ -3,6 +3,7 @@
   display: flex;
   width: 100%;
   margin: 10px;
+  padding: 10px;
   flex-direction: row;
 
     align-items: center;
@@ -103,7 +104,7 @@ html{
     display: inline-block;
     margin-top: 1rem;
     padding:.8rem 3rem;
-    background:var(--light-yellow);
+    background:gold;
     color:var(--black);
     cursor: pointer;
     font-size: 2.5rem;
@@ -112,7 +113,7 @@ html{
     text-align: center;
 }
 .btn:hover{
-    background:var(--yellow);
+    background-color: rgb(236, 236, 68);
 }
 .btn:visited{
     background:var(--yellow);
