--- a/client/src/features/main/style/main.css
+++ b/client/src/features/main/style/main.css
@@ -58,7 +58,7 @@
   /* font-weight: 700; */
 }
 .btn:hover{
-  background:var(--yellow);
+  background-color: rgb(236, 236, 68);
 }
 
 .btn a{
@@ -205,4 +205,7 @@ input value {
 .picnav  {
   width: 150px;
   margin-left: 5px;
+}
+.serviceadres {
+  margin: 20px;
 }
