--- a/client/src/features/news/style/modal.css
+++ b/client/src/features/news/style/modal.css
@@ -1,7 +1,7 @@
 .modal {
     /* height: 100%;
     width: 100%; */
-    background-color: rgba(0, 0, 0, 1);
+   
     position: fixed;
     top: 0;
     left: 0;
@@ -13,6 +13,18 @@
     /* width: 400px; */
     /* transform: scale(0); */
     transition: 0.5s;
+}
+.darkened{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
 }
 .post__container {
     background-color: rgba(0, 0, 0, 0.5);
@@ -43,7 +55,7 @@ input {
   
      margin-top: 20px;
      margin-bottom: 20px;
-     color: black;
+     color: rgb(255, 255, 255);
   }
 .modal-content.active{
     transform: scale(1);
