--- a/client/src/features/news/style/slider.css
+++ b/client/src/features/news/style/slider.css
@@ -24,6 +24,11 @@ background-color: blue;
     justify-content: center;
     align-items: center;
    }
+   .slick-arrow{
+    
+    z-index: 1000;
+   }
+
 
   .slick-dots li.slick-active{
 
@@ -31,7 +36,7 @@ background-color: blue;
     border-radius: 10px;
   }
 .post__img{
-  width: 50%;
+  width: 70%;
 
 }
 
@@ -40,11 +45,15 @@ background-color: blue;
   background-color: gold;
 }
 .posts_slide_container {
+  border: 1px solid yellow;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 90%;
+  width: 400px;
+  height: 500px;
+  overflow: scroll;
 }
 
 .slick-slider {
