--- a/client/src/features/sales/style/style.css
+++ b/client/src/features/sales/style/style.css
@@ -5,5 +5,17 @@
   justify-content: center;
   border: 1px solid yellow;
   border-radius: 20px;
+  width: 80%;
 
+}
+.sales__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.saleimg {
+  width: 90%;
 }
