--- a/client/src/features/service/style/style.css
+++ b/client/src/features/service/style/style.css
@@ -57,12 +57,15 @@ input {
 
 .biginput {
   background-color: rgb(78, 77, 77);
-  height: 100px;
+  /* height: 100px; */
+  width: 300px;
   border-radius: 20px;
   font-size: x-large;
   margin-top: 20px;
+  padding: 10px;
   margin-bottom: 20px;
   color: black;
+  border: 1px solid yellow;
 }
 
 .service-card {
@@ -71,10 +74,14 @@ input {
   align-items: center;
   justify-content: center;
   gap: 20px;
+  border: 1px solid yellow;
+  border-radius: 20px;
+  width: 50%;
+  padding: 30px;
 }
 
 .serviceimg{
-  width: 50%;
+  width: 80%;
 }
 
 .form__label {
@@ -143,8 +150,16 @@ input {
 
 .swiper {
   padding: 30px;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
-
+.services__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .servicename {
   font-size: xx-large;
   font-weight: 900;
@@ -168,17 +183,36 @@ input {
 }
 .comm-content {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  
 }
 .comm-rate {
   display: flex;
   margin: 2px;
+  gap: 20px;
 }
 .comment-item {
   margin-bottom: 10px;
-  background: orange;
-  border-radius: 20px;
-  padding: 5px;
+
+
+
   width: 100%;
+  height: 150px;
+  border-bottom: 1px solid yellow;
+  border-top: 1px solid yellow;
+  
+}
+.commtext {
+  padding: 20px;
+  color: azure;
+}
+.commname {
+  color: azure;
+}
+.commdate {
+  color: azure;
 }
 .comments-content {
  
@@ -195,4 +229,14 @@ input {
 }
 .servicerate {
   font-size: x-large;
+}
+
+.btnround {
+  font-size: medium;
+ color: black;
+  border-radius: 50%;
+  width: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
