--- a/client/src/features/usluga/style/style.css
+++ b/client/src/features/usluga/style/style.css
@@ -10,7 +10,7 @@
   overflow-x: hidden;
   overflow-y: auto;
   overscroll-behavior: contain;
-  border: 1px solid yellow;
+  /* border: 1px solid yellow; */
   border-radius: 20px;
 
   display: flex;
@@ -26,21 +26,25 @@ select {
   background-color: #f9d806;
   padding: 5px;
   margin: 5px;
+  margin-bottom: 20px;
   border-radius: 4px
 }
 
 .containerPay {
   /* position: absolute; */
   /* position: relative; */
-  background-color: rgb(186, 193, 200);
-  /* background: rgba(0, 0, 0, 0.5); */
-  width: 50%;
-  height: 50%;
+
+  background: rgba(0, 0, 0, 1);
+   border: 1px solid yellow;
+   border-radius: 20px;
+  /* width: 80%;
+  height: 50%; */
   display: flex;
   flex-direction: column;
   align-items: center;
   /* justify-content: flex-start; */
   z-index: 100;
+  padding: 20px;
   /* opacity: 1; */
 }
 #zPlan {
@@ -55,6 +59,7 @@ select {
   align-items: center;
   z-index: 100;
 }
+
 .content {
   background-color: black;
   display: flex;
@@ -76,12 +81,12 @@ select {
 }
 
 .table{
-  border: 1px solid yellow;
+  
   width: 100%;
   border-radius: 20px;
   padding: 20px;
 }
 .costinput {
   background-color: #f9d806;
-  
+  color: black;
 }
