--- a/client/src/app/App.css
+++ b/client/src/app/App.css
@@ -1,25 +1,16 @@
- /* .unclickable {
-	pointer-events: none;
-	cursor: not-allowed;
-	background-color: #000000;
-	opacity: 0.2 ;
-
-	
-  }  */
 .wrapper{
 	display: flex;
 	flex-direction: column;
-height: 100%;
+    height: 100%;
 	width: 100%;
 }
-
 #huge{
 	
 	display: flex;
-	width: 100%;
+	/* width: 100%; */
 	align-items: center; 
 	justify-content: center;
-	background-color: rgb(224, 221, 221);
+	/* background-color: rgb(0, 0, 0); */
 	flex-direction: column;
 
 	
@@ -28,16 +19,16 @@ height: 100%;
 body{
 	display: flex;
 	flex-direction: column;
-	
-	
+  background-color: #8b837c;
 }
 
 
 .font-link {
 	
 
-	font-family: 'Italiana';
-	/* text-shadow: 2px 2px 2px orangered; */
+	font-family: 'Orbitron';
+
+text-align: center;
 
 
   }
@@ -68,4 +59,597 @@ width: 100%;
 input :placeholder {
     color: black;
     font-weight: bolder;
+  }
+
+  .backBtn {
+	width: 300px;
+	font-size: large;
+	color: white;
+  }
+  .backBtn:hover {
+	width: 300px;
+	font-size: large;
+	color: white;
+	
+	cursor: pointer;
+  }
+  
+
+#b1 {
+	padding-top: 1.3%;
+	padding-bottom: 1.3%;
+	padding-left: 5%;
+	padding-right: 5%;
+	font-size: 120%;
+	border-radius: 30px;
+	border-width: 3px;
+	margin: 24px;
+	width: 200px;
+	background-color:#5c5552;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  
+  }
+  #b1:hover {
+	padding-top: 1.3%;
+	padding-bottom: 1.3%;
+	padding-left: 5%;
+	padding-right: 5%;
+	font-size: 120%;
+	border-radius: 30px;
+	border-width: 3px;
+	margin: 24px;
+	width: 200px;
+	background-color:azure;
+  
+  
+  }
+  #b2 {
+	padding-top: 1.3%;
+	padding-bottom: 1.3%;
+	padding-left: 5%;
+	padding-right: 5%;
+	font-size: 120%;
+	border-radius: 30px;
+	border-width: 3px;
+	margin: 24px;
+	width: 200px;
+	background-color:#1d1e1e;
+	
+  
+  }
+  #b2:hover {
+	padding-top: 1.3%;
+	padding-bottom: 1.3%;
+	padding-left: 5%;
+	padding-right: 5%;
+	font-size: 120%;
+	border-radius: 30px;
+	border-width: 3px;
+	margin: 24px;
+	width: 200px;
+	background-color:azure;
+	
+  
+  }
+  .navbtns {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+  .naming {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: fixed;
+	z-index:999;
+  
+   
+  }
+  
+  .stop-scrolling {
+	position: absolute;
+	top: 620px;
+  }
+  #bigName {
+	font-size: 80px;
+	color: #020202;
+	margin-bottom: 30px;
+  
+  
+	
+   
+	/* min-width: 100%;
+	min-height: 100%; */
+  }
+  @media (max-width: 768px) {
+	#bigName {
+	  font-size: 60px;
+	 
+	}
+  }
+  
+  @media (max-width: 480px) {
+	#bigName {
+	  font-size: 30px;
+	}
+  }
+  /* #myVideo {
+	position: fixed;
+	right: 0;
+	bottom: 0;
+	min-width: 100%;
+	min-height: 100%;
+  }
+  
+  .content {
+	position: fixed;
+	bottom: 0;
+	color: #f1f1f1;
+	width: 100%;
+	padding-left: 400px;
+	padding-bottom: 200px;
+  } */
+  
+  
+  .btn {
+   
+  
+	/* font-weight: 700; */
+  }
+  .btn:hover{
+	background-color: #474747;
+  }
+  
+  .btn a{
+	font-weight: 500;
+	
+  }
+  
+  .newsPart {
+	height: 100px;
+  }
+  
+   .links_container {
+  
+	display: flex;
+   justify-content: center;
+	align-items: center;
+  } 
+  
+/*  */
+  .container {
+	/* background-color: rgb(255, 255, 255); */
+	width: 100%;
+	
+  
+  }
+  .content {
+	/* background-color: aquamarine; */
+  }
+  
+  #background-video {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #A18369;
+  }
+  .hands {
+	opacity: 0.6;
+  
+	
+  }
+  
+  /* .footeritem{
+	margin:0 1rem;
+	
+  
+	color: #ffc400;
+  
+  } */
+  /* .footeritem:hover{
+	color: orange;
+	padding-right: 2rem;
+	text-shadow: 1px 1px 1px orangered;
+  } */
+  .footeritem{
+	text-decoration: none;
+	padding-right: .5rem;
+  }
+  
+  
+  h1 {
+	font-size: 25px;
+	color: rgba(92,85,82,255);
+  
+  }
+  /* rega */
+  
+  #selectClick {
+	  font-size: large;
+	 background-color: #f9d806;
+	 padding: 5px;
+	 margin: 5px;
+	 border-radius: 4px
+	
+	}
+  
+	form{
+	  display: flex;
+	  flex-direction: column;
+	}
+	.form-label:hover {
+	  color: orange;
+	  text-shadow: 1px 1px 1px orangered;
+  }
+  .form-label {
+	color: rgb(0, 0, 0);;
+	display: flex;
+	align-items: center;
+   flex-direction: column;
+	justify-content: space-between;
+	font-size: x-large;
+   
+  }
+  #selectClickService {
+	font-size: large;
+	background-color: #f9d806;
+	padding: 5px;
+	margin: 5px;
+	border-radius: 4px
+  }
+  #uslugaselect {
+	font-size: large;
+	background-color: #f9d806;
+	padding: 5px;
+	margin: 5px;
+	border-radius: 4px
+  }
+  .regcont{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 20px;
+	padding: 20px;
+  } 
+  
+  input {
+	background-color: rgb(0, 0, 0);
+	border-radius: 20px;
+  height: 50px;
+	 margin-top: 20px;
+	 margin-bottom: 20px;
+	 color: black;
+	 text-shadow: 1px 1px 1px rgb(0, 0, 0);
+   
+  }
+  input value {
+	color: black;
+  }
+  .btns{
+	padding: 20px;
+  
+  }
+  
+  
+  
+  .carpic {
+	width: 150px;
+  
+  }
+  .carpic:hover {
+	width: 150px;
+	opacity: 0.2;
+  }
+  
+  
+  .picnav  {
+	width: 150px;
+	margin-left: 5px;
+	border-radius: 50%;
+  }
+  /* .picnav:hover  {
+	opacity: 0.2;
+   
+	width: 150px;
+	margin-left: 5px;
+  } */
+  
+  @media (max-width: 768px) {
+	.picnav  {
+	  width: 70px;
+	 
+	}
+  }
+  .serviceadres {
+	margin: 20px;
+  }
+  #namecont {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 30px;
+  }
+  .par {
+   
+	
+	text-align: center;
+   
+	/* display: flex;
+  justify-content: center;
+	align-items: center; */
+  }
+  
+  .about {
+   
+  background-color:#5c5552 ;
+	display: flex;
+	color: black;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	padding: 90px;
+	margin: 30px;
+	border-radius: 20px;
+  }
+  .abouttext{
+	color: black;
+	font-size: x-large;
+	font-family: 'Orbitron';
+  }
+
+
+  
+  .posts__container {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); /* Автоматически подбирает количество колонок */
+	grid-template-rows: auto;
+	gap: 5rem;
+	padding: 20px;
+	flex-grow: 1;
+	width: 100%;
+	
+  overflow-y: auto; 
+  padding: 20px; /* Внутренние отступы внутри контейнера */
+  margin: 0 auto; /* Центрирование контейнера */
+  max-width: 1200px; /* Максимальная ширина контейнера */
+  width: 100%; /* Контейнер занимает всю доступную ширину до max-width */
+
+  }
+  
+    /* МАЛЕНЬКИЙ ЭКРАН */
+
+@media (max-width: 761px) {
+	.posts__container{
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		width: 100%;
+		padding: 20px;
+	  }
+  .menu2 {
+		display: block;
+	}
+	.menu_close {
+		display: block;
+	}
+
+}
+
+
+
+
+.service-card {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
+	padding: 20px;
+	border: 1px solid #ccc;
+	border-radius: 10px;
+	overflow: hidden;
+	background-color: rgba(136, 107, 77, 0.5);
+  }
+  
+  .service-card .content {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
+  }
+
+  .service-card .serviceimg {
+	width: 100%;
+	object-fit: cover;
+	border-radius: 10px;
+  }
+  
+  .service-card .servicename,
+  .service-card .iteminfo {
+	font-size: 2rem;
+	color: #191919;
+	display: -webkit-box; /* Use flexbox layout */
+	-webkit-line-clamp: 2; /* Limit text to 2 lines */
+	-webkit-box-orient: vertical; /* Stack lines vertically */
+	overflow: hidden; /* Hide overflow text */
+	text-overflow: ellipsis; /* Add ellipsis for overflow text */
+
+	line-height: 1.5em; /* Ensure consistent line height */
+  }
+  .service-card .servicename {
+	text-align: center;
+	font-size: x-large;
+	font-weight: bold;
+	white-space: pre-wrap;
+	color: #333;
+
+	overflow-wrap: break-word; /* Обеспечивает перенос слов, если они слишком длинные */
+  }
+  
+  .service-card .iteminfo {
+	flex-grow: 1;
+	color: #666;
+  }
+  
+  .service-card .btn {
+	
+	padding: 10px 20px;
+	
+	color: white;
+	text-decoration: none;
+	border-radius: 5px;
+  }
+  
+  
+  /* Стили для hover эффекта */
+
+  
+  .serviceimg {
+	width: 300px; /* Фиксированная ширина изображения */
+
+  object-fit: cover; /* Масштабирует изображение, чтобы заполнить блок, обрезая края */
+  display: block; /* Для корректного отображения внутри flex или grid-контейнера */
+  border-radius: 10px; 
+  }
+  
+
+
+  
+
+  #btn-more {
+	margin-top: auto; /* Кнопка "Подробнее" всегда будет внизу карточки */
+	align-self: flex-start;
+	padding: 10px 20px;
+	background-color: #007bff;
+	color: white;
+	text-decoration: none;
+	border-radius: 5px;
+  }
+  #btn-more a {
+	color: white;
+	text-decoration: none;
+  }
+   
+body{
+	width: 100%;
+  }
+  .navbtns {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+  }
+  
+  .navbtns button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	padding: 0; /* Убедитесь, что нет лишних отступов */
+	border: none; /* Убедитесь, что нет границы */
+  }
+  
+  .navlink2, .navlink3 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	text-decoration: none; /* Уберите подчеркивание */
+	color: inherit; /* Унаследуйте цвет от кнопки */
+	font-size: large; /* Убедитесь, что размер шрифта установлен */
+  }
+  
+  .navlink2 {
+	font-weight: bold;
+  }
+
+  
+  .sliderPart {
+	width: 100%;
+	
+	margin: 30px;
+  
+  }
+  .slick-slider {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	flex-grow: 1; /* Расширяется, чтобы занять оставшееся пространство между navbar и footer */
+	padding: 20px;
+	position: relative;
+  
+  }
+  @media (max-width: 768px) {
+	.sliderPart{
+	  display: none;
+	}
+	.slick-slider {
+		
+		width: 90vw; 
+		padding: 15px; 
+		transform: scale(1); 
+		margin: 0 5px;
+	}
+  }
+  
+  
+  @media (max-width: 480px) {
+	.sliderPart{
+	  display: none;
+	}
+	.slick-slider {
+		width: 100vw; /* На очень маленьких экранах занимаем всю ширину */
+		padding: 10px; /* Еще меньше padding */
+		border-radius: 8px; /* Уменьшаем скругление */
+	}
+  }
+
+  .servicenamepage {
+	font-size: xx-large;
+  }
+  .price, .visit {
+	font-size: 3rem;
+  }
+  .post-page__text{
+	text-align: center;
+	font-size: x-large;
+	font-weight: bold;
+	white-space: pre-wrap;
+	color: #333;
+
+	overflow-wrap: break-word; 
+	
+  }
+  .posttext{
+	font-size: 2rem;
+	color: #191919;
+	display: -webkit-box; /* Use flexbox layout */
+	-webkit-line-clamp: 5; /* Limit text to 2 lines */
+	-webkit-box-orient: vertical; /* Stack lines vertically */
+	overflow: hidden; /* Hide overflow text */
+	text-overflow: ellipsis; /* Add ellipsis for overflow text */
+
+	line-height: 1.5em; /* Ensure consistent line height */
+	
+  }
+  .posttitle {
+	text-align: center;
+	font-size: x-large;
+	font-weight: bold;
+	white-space: pre-wrap;
+	color: #333;
+
+	overflow-wrap: break-word;
+  }
+  .postcontent {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 100%;
+	align-items: center;
+	padding:20px
   }
