--- a/client/src/features/footer/style/style.css
+++ b/client/src/features/footer/style/style.css
@@ -1,143 +1,151 @@
 
 .footer{
- /* background-color: rgb(154, 151, 151); */
- width: 100%;
-    display: flex;
-    flex-direction: row;
-    background-image: url("https://i.pinimg.com/originals/25/c8/5a/25c85ad9cde83d7c0c5e347fea5c8789.jpg");
-   
-}
-a{
-   font-weight: 900;
-    text-decoration: none;
-}
-.footer .box-container{
+    /* background-color: rgb(154, 151, 151); */
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-  padding: 50px;
-    /* grid-template-rows: repeat(auto-fit, minmax(25rem, 1fr)); */
-    /* gap:20px; */
-}
-
-.footer .box-container .box2 h3{
-    font-size: 2.2rem;
-    /* padding:1rem 0; */
-    color:rgb(239, 189, 114);
-}
-.footer .box-container .box h3{
-    font-size: 2.2rem;
-    padding:1rem 0;
-    color:rgb(239, 189, 114);;
-
-  
-}
-.box {
-    margin-left: 20px;
-}
-.footer .box-container .box2 a{
-    display: block;
-    font-size: 2rem;
-    padding:1rem 0;
-    text-shadow: 1px 1px 1px #734E38;
-    color:#ACD3BE;
-}
-.footer .box-container .box a{
-    display: block;
-    font-size: 2rem;
-    padding:1rem 0;
-    text-shadow: 1px 1px 1px #734E38;
-    color:rgb(255, 255, 255);
-}
-
-.footer .box-container .box2 a i{
-    padding-right: .5rem;
- 
-}
-.footer .box-container .box a i{
-    padding-right: .5rem;
-  
-}
-.footer .box-container .box .footerlink{
-    padding-right: .5rem;
-    color: #ACD3BE;
-    font-size: large;
-    font-weight: bold;
-  
-}
-.footer .box-container .box .footerlink:hover{
-    padding-right: 2rem;
-    color: #ACD3BE;
-    font-size: xx-large;
-    cursor: pointer;
+       display: flex;
+       flex-direction: row;
+       background-color:  #5c5552;
+       /* background-image: url("https://i.pinimg.com/originals/25/c8/5a/25c85ad9cde83d7c0c5e347fea5c8789.jpg"); */
+      
+   }
+   /* a{
+      font-weight: 900;
+       text-decoration: none;
+   } */
+   .footer .box-container{
+       width: 100%;
+       display: flex;
+       flex-direction: row;
+       align-items: center;
+       justify-content: space-around;
+     padding: 50px;
+       /* grid-template-rows: repeat(auto-fit, minmax(25rem, 1fr)); */
+       /* gap:20px; */
+   }
    
-    text-shadow: 1px 1px 1px #260F01;
-  
-}
-
-
-.footer .box-container .box2 a:hover i{
-    padding-right: 2rem;
- 
-}
-.footer .box-container .box a:hover i{
-    padding-right: 2rem;
- 
-}
-
-.footer .credit{
-    text-align: center;
-    /* padding:1.5rem;
-    padding-top: 2.5rem;
-    margin-top: 2rem; */
-
-    font-size: 2rem;
-    color:rgb(239, 189, 114);;
-}
-.box-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-a.nav-link.active {
-    color: #0E1333;
-    border-bottom: solid 2.5px #0E1333;
-    padding-bottom: 2.5em;
-}
-
-
-.totop {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60px;
-    width: 60px;
+   .footer .box-container .box2 h3{
+       font-size: 2.2rem;
+       /* padding:1rem 0; */
+       color:azure;
+   }
+   .footer .box-container .box h3{
+       font-size: 2.2rem;
+       padding:1rem 0;
+       color:azure;
    
-}
-.totop:hover{
-    background-color: rgb(236, 236, 68);
-  }
+     
+   }
+   .box {
+       margin-left: 20px;
+   }
+   .footer .box-container .box2 a{
+       display: block;
+       font-size: 2rem;
+       padding:1rem 0;
+       text-shadow: 1px 1px 1px #734E38;
+       color:azure;
+   }
+   .footer .box-container .box a{
+       display: block;
+       font-size: 2rem;
+       padding:1rem 0;
+       text-shadow: 1px 1px 1px #734E38;
+       color:rgb(255, 255, 255);
+   }
+   
+   .footer .box-container .box2 a i{
+       padding-right: .5rem;
+    
+   }
+   .footer .box-container .box a i{
+       padding-right: .5rem;
+     
+   }
+   .footer .box-container .box .footerlink{
+       padding-right: .5rem;
+       color: #0b0b0b;
+       font-size: large;
+       font-weight: bold;
+     
+   }
 
- .footeritem{
-    margin:0 1rem;
-    font-size:4rem;
+   
+   
 
-    color: #ffc400;
-  
-}
-/* .footeritem:hover{
-    color: orange;
-    padding-right: 2rem;
-    text-shadow: 1px 1px 1px orangered;
-} */
-.footeritem{
-    text-decoration: none;
-    padding-right: .5rem;
-}
-
-.footer li {
-  color: aquamarine;
-}
+   
+   .footer .credit{
+       text-align: center;
+       /* padding:1.5rem;
+       padding-top: 2.5rem;
+       margin-top: 2rem; */
+   
+       font-size: 2rem;
+       color:rgb(14, 14, 13);;
+   }
+   .box-container {
+       display: flex;
+       justify-content: center;
+       align-items: center;
+   }
+   
+   a.nav-link.active {
+       color: #0E1333;
+       border-bottom: solid 2.5px #0E1333;
+       padding-bottom: 2.5em;
+   }
+   
+   
+   .totop {
+       display: flex;
+       border-radius: 5px;
+       justify-content: center;
+       align-items: center;
+       height: 60px;
+       width: 60px;
+       padding:10px;
+       background-color:#adacaf ;
+       color: black;
+      
+   }
+   .totop:hover{
+       background-color: rgb(137, 137, 137);
+     }
+   
+    .footeritem{
+       margin:0 1rem;
+       font-size:4rem;
+   
+       color: black;
+     
+   }
+   /* .footeritem:hover{
+       color: orange;
+       padding-right: 2rem;
+       text-shadow: 1px 1px 1px orangered;
+   } */
+   .footeritem{
+       text-decoration: none;
+       padding-right: .5rem;
+   }
+   
+   .footer li {
+     color: aquamarine;
+   }
+   
+   @media (max-width: 761px) {
+       .footer .box-container{
+          
+           display: flex;
+           flex-direction: column;
+           align-items: center;
+           justify-content: space-around;
+         padding: 50px;
+           /* grid-template-rows: repeat(auto-fit, minmax(25rem, 1fr)); */
+           /* gap:20px; */
+       }
+   
+       ymaps {
+           height: 100%;
+       }
+   
+   }
