--- a/client/src/features/news/style/modal.css
+++ b/client/src/features/news/style/modal.css
@@ -40,8 +40,8 @@
 .modal-content{
     padding: 20px;
     border-radius: 12px;
-    background-color: rgb(0, 0, 0);
-    border: 1px solid yellow;
+    background-color: rgb(117, 116, 116);
+    border: 1px solid rgb(124, 99, 48);
     
     width: 50vw;
     transform: scale(0.5);
@@ -66,5 +66,5 @@ input {
     display: flex;
     align-items: center;
     gap: 20px;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
 }
