--- a/client/src/features/news/style/slider.css
+++ b/client/src/features/news/style/slider.css
@@ -13,6 +13,11 @@ background-color: blue;
     flex-direction: column;
   
   } */
+  @media (max-width: 768px) {
+    .slick-list {
+      border-radius: 20px;
+    }
+  }
 
   .slick-dots li{
 
@@ -51,7 +56,7 @@ background-color: blue;
   background-color: gold;
 }
 .posts_slide_container {
-  border: 1px solid rgb(239, 189, 114);;
+  border: 1px solid rgb(128, 88, 28);;
   background-color: #D8C2AA;
   border-radius: 20px;
   display: flex;
@@ -63,6 +68,22 @@ background-color: blue;
   overflow: scroll;
   
  
+}
+@media (max-width: 768px) {
+  .posts_slide_container {
+      
+      width: 90vw; /* Увеличиваем ширину для мобильных экранов */
+      padding: 15px; /* Уменьшаем padding */
+      transform: scale(1); /* Убираем уменьшение */
+  }
+}
+
+@media (max-width: 480px) {
+  .posts_slide_container {
+      width: 100vw; /* На очень маленьких экранах занимаем всю ширину */
+      padding: 10px; /* Еще меньше padding */
+      border-radius: 8px; /* Уменьшаем скругление */
+  }
 }
 
 .slick-slider {
@@ -76,4 +97,15 @@ background-color: blue;
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+.slidertitle {
+  font-size: x-large;
+  text-align: center;
+}
+.sliderwrapper {
+  justify-content: space-evenly;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
