--- a/client/src/features/news/style/style.css
+++ b/client/src/features/news/style/style.css
@@ -1,148 +1,153 @@
 h2, h3, h4 {
-    color: aliceblue;
+  color: aliceblue;
 }
 
 body {
-    height: 100%;
-    background-color: rgb(215, 250, 217);
+  height: 100%;
+  background-color: #AE9787;
+  /* width: fit-content; */
+}
+@media (max-width: 768px) {
+body {
+    /* width: fit-content;  */
+    padding: 15px; /* Уменьшаем padding */
+    transform: scale(1); /* Убираем уменьшение */
+}
 }
 
+@media (max-width: 480px) {
+body {
+    width: 100vw; /* На очень маленьких экранах занимаем всю ширину */
+    padding: 10px; /* Еще меньше padding */
+    border-radius: 8px; /* Уменьшаем скругление */
+}
+}
+
+/* цвет общего фона */
 .containerPostForm{
-
-    padding: 40px;
-    
-}
-.containerSaleForm{
 
   padding: 40px;
   
 }
+@media (max-width: 768px) {
+.containerPostForm {
+    width: 90vw; /* Увеличиваем ширину для мобильных экранов */
+    padding: 15px; /* Уменьшаем padding */
+    transform: scale(1); /* Убираем уменьшение */
+}
+}
+
+@media (max-width: 480px) {
+.containerPostForm {
+    width: 100vw; /* На очень маленьких экранах занимаем всю ширину */
+    padding: 10px; /* Еще меньше padding */
+    border-radius: 8px; /* Уменьшаем скругление */
+}
+}
+.containerSaleForm{
+
+padding: 40px;
+
+}
 /* .swiper {
-    width: 600px;
-    height: 300px;
-  } */
+  width: 600px;
+  height: 300px;
+} */
 
-  /* .post-page_container{
-    background-color: aqua;
-  } */
+/* .post-page_container{
+  background-color: aqua;
+} */
 
-  .post-page{
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 60px;
-
-  }
-
- img {
-   width: 80vw;
-   margin: 20px;
-   border-radius: 20px;
-  }
-
-  h3 {
-    line-height: 30px;
-    font-size: large;
-
-  }
-  *{
-    
-
-    box-sizing: border-box;
-  }
+.post-page{
   
-  button {
-    background-color: rgb(243, 215, 173);;
-    color: black;
-    padding-top: 1.3%;
-    padding-bottom: 1.3%;
-    padding-left: 5%;
-    padding-right: 5%;
-    font-size: 120%;
-    border-radius: 30px;
-    border-width: 3px;
-    margin: 24px;
-  }
-  .posts__container  {
-    display: grid;
-    grid-template-columns: repeat(2,4fr);
-    grid-template-rows: auto;
-    gap: 1rem;
-  }
-  /* .posts__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 60px;
+
+}
+
+img {
+ width: 80vw;
+ margin: 20px;
+ border-radius: 20px;
+}
+
+*{
+  
+
+  box-sizing: border-box;
+}
+
+button {
+  background-color: rgb(243, 215, 173);;
+  color: black;
+  padding-top: 1.3%;
+  padding-bottom: 1.3%;
+  padding-left: 5%;
+  padding-right: 5%;
+  font-size: 120%;
+  border-radius: 30px;
+  border-width: 3px;
+  margin: 24px;
+}
+*/
+/* .posts__container {
 row-gap: 10px;
-    display: flex;
- flex-wrap: wrap;
-    flex-wrap: wrap-reverse;
+  display: flex;
+flex-wrap: wrap;
+  flex-wrap: wrap-reverse;
 justify-content: space-between;
 
 gap: 20px;
 
-  
-  } */
-  /* МАЛЕНЬКИЙ ЭКРАН */
 
-@media (max-width: 761px) {
-	.posts__container{
-		display: flex;
-		flex-direction: column;
-		align-items: start;
+} */
 
-		justify-content: flex-start;
-		position: absolute;
-		width: 100%;
-		/* visibility: hidden; */
-	}
-  .menu2 {
-		display: block;
-	}
-	.menu_close {
-		display: block;
-	}
 
+h2{
+  padding-right: 70px;
+  padding-left: 70px;
 }
 
-  .post__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 90%;
-    border: 1px solid yellow; 
-    border-radius: 50px;
-    
-  }
+/* .swiper{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
 
-  h2{
-    padding-right: 70px;
-    padding-left: 70px;
-  }
 
-  /* .swiper{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  } */
 
-  .post-page__text {
-    padding: 50px;
-   
-  }
-
-  .post-page__img {
-   
-    border-radius: 20px;
-    width: 70%;
-  }
-
- .scroll {
+.post-page__img {
  
-    height: 200px; /* высота нашего блока */
-    width: 400px; /* ширина нашего блока */
-    background: #D8C2AA /* цвет фона, белый */
-    overflow-x: scroll; /* прокрутка по горизонтали */
-    overflow-y: scroll; /* прокрутка по вертикали */
-    
- }
+  border-radius: 20px;
+  width: 50%;
+}
+@media (max-width: 768px) {
+  .post-page__img {
+ 
+    border-radius: 20px;
+    width: 80%;
+  }
+}
+
+@media (max-width: 480px) {
+  .post-page__img {
+ 
+    border-radius: 20px;
+    width: 80%;
+  }
+   
+}
+
+
+.scroll {
+
+  height: 200px; /* высота нашего блока */
+  width: 400px; /* ширина нашего блока */
+  background: #D8C2AA /* цвет фона, белый */
+  overflow-x: scroll; /* прокрутка по горизонтали */
+  overflow-y: scroll; /* прокрутка по вертикали */
+  
+}
