--- a/client/src/features/personalArea/style.css
+++ b/client/src/features/personalArea/style.css
@@ -19,7 +19,7 @@
     width: 100%;
     display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
     font-size: x-large;
     color: beige;
@@ -28,19 +28,13 @@
     
 }
 input {
-    background-color: rgb(0, 0, 0);
-    border-radius: 20px;
-  height: 50px;
-     /* margin-top: 20px;
-     margin-bottom: 20px; */
-     color: rgb(255, 255, 255);
-     text-shadow: 1px 1px 1px rgb(0, 0, 0);
-     border: 1px solid yellow;
-     padding: 40px;
-     width: 100%;
-     
-   
-  }
+  background-color: rgb(78, 77, 77);
+  border-radius: 20px;
+  font-size: x-large;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: black;
+}
   input :placeholder {
     color: black;
     font-weight: bolder;
@@ -54,7 +48,7 @@ input {
   .itemName {
     font-weight: bold;
     font-style: oblique;
-    color: goldenrod;
+    color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
   }
