--- a/client/src/features/service/style/style.css
+++ b/client/src/features/service/style/style.css
@@ -1,22 +1,17 @@
-h2,
-h3 {
+h2 {
   color: aliceblue;
 }
 body {
   height: 100%;
+  /* width:fit-content */
 }
 
-h3 {
-  line-height: 30px;
-}
-*{
-    
-
+* {
   box-sizing: border-box;
 }
 
 button {
-  background-color: rgb(249, 221, 178);;
+  background-color: rgb(249, 221, 178);
   color: black;
   padding-top: 1.3%;
   padding-bottom: 1.3%;
@@ -47,7 +42,7 @@ button {
   border: 1px solid white;
   margin: 20px;
   padding: 30px;
-  width: 80%;
+  width: 90%;
   border-radius: 20px;
 }
 
@@ -73,33 +68,50 @@ input {
   border: 1px solid yellow;
 }
 
-.service-card {
+/* . {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
- 
-  border: 1px solid yellow;
+  border: 1px solid rgb(4, 4, 3);
   border-radius: 20px;
   width: 70%;
   padding: 20px;
-  background-color: #D8C2AA;
+  background-color:rgba(136, 107, 77, 0.5);;
   flex: 0.3 0 calc(50% - 20px); 
   margin-bottom: 20px;
 
+} */
+/* @media (max-width: 768px) {
+  .service-card{
+      width: 90%; 
+     
+  }
+} */
+
+/* @media (max-width: 480px) {
+  .service-card{
+    width: 90%; 
+   
+}
+} */
+a {
+  color: white;
+  text-align: center;
 }
 
-.serviceimg{
+.serviceimg {
   width: 80%;
 }
 
 .form__label {
-  font-size: x-large;
+  font-size: large;
 }
 .services-page {
   display: flex;
   flex-direction: column;
   margin: 30px;
+  align-items: center;
 }
 .content {
   margin: 10px;
@@ -112,7 +124,6 @@ input {
   width: 100%;
   align-items: center;
   justify-content: space-between;
-
 }
 #usluga {
   display: flex;
@@ -135,7 +146,7 @@ input {
   align-items: center;
 }
 
-.sortServices{
+.sortServices {
   padding: 10px;
   display: flex;
   flex-direction: column;
@@ -145,16 +156,14 @@ input {
   border-radius: 20px;
   width: 500px;
   height: 400px;
-
 }
 
-.variant{
-  background-color: rgb(239, 189, 114);;
+.variant {
+  background-color: rgb(239, 189, 114);
   width: 230px;
   height: 40px;
   margin-bottom: 20px;
   border-radius: 10px;
-
 }
 
 .swiper {
@@ -169,20 +178,7 @@ input {
   justify-content: center;
   align-items: center;
 }
-.servicename {
-  font-size: xx-large;
-  font-weight: 900;
-  margin: 20px;
-  padding-right: .5rem;
-}
-.servicename:hover {
-  padding-right: 2rem;
-  color: rgb(239, 189, 114);;
-  font-size: 40px;
-  font-weight: 900;
-  margin: 20px;
-  padding-right: .5rem;
-}
+
 .serviceadres {
   margin: 20px;
 }
@@ -195,7 +191,6 @@ input {
   justify-content: center;
   align-items: center;
   gap: 20px;
-  
 }
 .comm-rate {
   display: flex;
@@ -205,13 +200,10 @@ input {
 .comment-item {
   margin-bottom: 10px;
 
-
-
   width: 100%;
   height: 150px;
   border-bottom: 1px solid yellow;
   border-top: 1px solid yellow;
-  
 }
 .commtext {
   padding: 20px;
@@ -224,7 +216,6 @@ input {
   color: azure;
 }
 .comments-content {
- 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -242,7 +233,7 @@ input {
 
 .btnround {
   font-size: medium;
- color: black;
+  color: black;
   border-radius: 50%;
   width: 10px;
   display: flex;
